# OpenGLPlayground

./: Buffer.cpp  Buffer.hpp  CMakeLists.txt  FileIO.cpp  FileIO.hpp  FrameCounter.cpp  FrameCounter.hpp  GLUtils.cpp  GLUtils.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Shader.cpp  Shader.hpp  UniformBlock.cpp  UniformBlock.hpp  main.cpp
shaders/: base.frag  base.vert  diffuse.frag  diffuse.vert  normal.frag  normal.vert
